parser/tests/snapshots/parser__garbage_hex_value_1.snap
---
created: "2019-08-18T08:58:24.223291Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 1, in TakeWhileMN:
a: #ff0zff
    ^

1: at line 1, in Hex Value:
a: #ff0zff
    ^

2: at line 1, in Declaration:
a: #ff0zff
^


